# ForgeMind-AI

./: .env.example  .gitignore  pyproject.toml  test_agentic.py  test_chunking.py  test_embeddings.py  test_factory.py  test_graph.py  test_logger.py  test_pdf.py  test_rag.py  test_registry.py  test_retriverer.py  test_search.py  test_settings.py  test_tool.py  test_vectorstore.py
app/: dependencies.py  main.py
app/agents/: graph.py  maintenance_agent.py  rag_agent.py  router.py  state.py  supervisor.py  web_agent.py
app/api/: router.py
app/api/v1/: chat.py  documents.py  health.py  upload.py
app/config/: rag.py  settings.py
app/core/: logger.py
app/langchain_tools/: maintenance.py  rag.py  registry.py  web.py
app/llms/: base.py  factory.py
app/llms/providers/: gemini.py  groq.py  openai.py
app/prompts/: planner.py  rag.py  router.py
app/rag/: indexer.py  rag_service.py
app/rag/chunking/: text_splitter.py
app/rag/embeddings/: embedding_service.py
app/rag/loader/: pdf_loader.py
app/rag/retriverer/: retriverer_service.py
app/rag/vectorstore/: chroma_store.py
app/schemas/: chat.py  message.py  planner.py  router.py
app/services/: document_service.py  llm_services.py  search_service.py
app/tools/: base.py  maintenance_tool.py  rag_tools.py  web_tools.py
